--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,3 +8,5 @@ chromadb==0.4.24
 sse-starlette==1.6.1
 aiohttp==3.9.5
 pydantic-settings==2.2.1
+langgraph-checkpoint-postgres==2.0.23
+psycopg[binary,pool]==3.2.9
