--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
 fastapi==0.110.0
 uvicorn[standard]==0.29.0
 python-dotenv==1.0.1
+langchain-core>=0.3.66
 langchain==0.3.26
 langchain-openai==0.3.28
 langgraph==0.5.3
@@ -8,5 +9,5 @@ langchain-community==0.3.27
 chromadb==0.4.24
 sse-starlette==1.6.1
 aiohttp==3.9.5
-pydantic-settings==2.2.1
+pydantic-settings==2.10.1
 langgraph-checkpoint-sqlite==2.0.10
