--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,7 @@
 fastapi==0.116.1
 uvicorn[standard]==0.29.0
 python-dotenv==1.0.1
-langchain-core>=0.3.66
+langchain-core==0.3.69
 langchain==0.3.26
 langchain-openai==0.3.28
 langgraph==0.5.3
@@ -12,3 +12,4 @@ aiohttp==3.10.11
 pydantic-settings==2.10.1
 langgraph-checkpoint-sqlite==2.0.10
 starlette==0.40.0
+aiosqlite==0.20.0
