--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,7 +8,10 @@ WORKDIR /app
 COPY backend/requirements.txt ./requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
+# Copy backend source
 COPY backend/app ./app
+# memory helper lives at project root
+COPY backend/memory.py ./memory.py
 
 # Default env (can be overridden at runtime)
 ENV PYTHONUNBUFFERED=1 \
@@ -17,4 +20,3 @@ ENV PYTHONUNBUFFERED=1 \
 EXPOSE 8000
 
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
-
