--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "isomorphic-ws": "^5.0.0",
     "next": "14.2.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "24.0.14",
