Ignore enforcement files in legacy checks

--- a/.github/workflows/no-legacy.yml
+++ b/.github/workflows/no-legacy.yml
@@ -11,7 +11,9 @@ jobs:
         run: |
           set -eu
           git fetch --depth=1 origin ${{ github.base_ref }}
-          paths=$(git diff --name-only origin/${{ github.base_ref }} | grep -Ei '(^|/)(legacy|shim)/|legacy|shim' || true)
+          paths=$(git diff --name-only origin/${{ github.base_ref }} |
+            grep -Ei '(^|/)(legacy|shim)/|legacy|shim' |
+            grep -v -E '^\.github/workflows/no-legacy.yml$|^tests/ci/test_no_legacy.py$|^tests/test_no_legacy_patterns.py$' || true)
           if [[ -n "$paths" ]]; then
             echo "::error::Legacy/shim files touched:\n$paths"
             exit 1
