--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,26 +6,39 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "build:tokens": "style-dictionary build --config ../style-dictionary.config.js",
+    "test": "jest"
   },
   "dependencies": {
+    "@catppuccin/palette": "^1.7.1",
+    "@catppuccin/tailwindcss": "^0.1.6",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.0",
     "@mui/material": "^5.15.0",
+    "autoprefixer": "^10.4.21",
     "isomorphic-ws": "^5.0.0",
     "next": "14.2.3",
+    "postcss": "^8.5.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "style-dictionary": "^4.4.0",
+    "tailwindcss": "^4.1.11",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/jest": "^30.0.0",
     "@types/node": "24.0.14",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
+    "color-contrast": "^1.0.0",
     "eslint": "^8.52.0",
     "eslint-config-next": "14.2.3",
+    "jest": "^30.0.4",
+    "jest-environment-jsdom": "^30.0.4",
+    "ts-jest": "^29.4.0",
     "typescript": "5.4.2"
   }
 }
