--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react-dom": "18.2.0",
     "style-dictionary": "^4.4.0",
     "tailwindcss": "^4.1.11",
+    "@tailwindcss/postcss": "^4.1.11",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
