build(frontend): copy Catppuccin assets into frontend context and exclude stories from tsconfig

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -19,6 +19,8 @@
   "exclude": [
     "node_modules",
     "src/stories/**/*",
-    "src/__tests__/**/*"
+    "src/__tests__/**/*",
+    "**/*.stories.tsx",
+    "**/*.stories.ts"
   ]
 }
