fix: make save_message async

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 # Rename this file to `.env` and fill in your secrets.
 
 OPENAI_API_KEY=
+# Vector DB connection (default values for docker-compose)
+CHROMA_HOST=localhost
+CHROMA_PORT=8001
 # Optional simple bearer token for basic auth. Comment out to disable.
 # JULES_AUTH_TOKEN=my-secret-token
 
