--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,9 +18,7 @@ services:
     image: ghcr.io/chroma-core/chroma:latest
     container_name: chroma
     ports:
-      # Chroma HTTP API exposed on host port 8001
-      - "8001:8000"
+      - "8001:8000"  # Chroma HTTP API
     volumes:
-      # Persist Chroma data in local data/chroma directory
-      - ./data/chroma:/data
+      - ./.chroma-data:/data  # persisted vector store
     restart: unless-stopped
