--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,5 +15,7 @@ jobs:
         run: |
           pip install pytest import-linter
           pip install -r backend/requirements.txt
+      - name: Start services
+        run: docker compose up --build -d
       - name: Run tests
         run: pytest -m "not slow"
