--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,19 @@
-[project]
+[tool.poetry]
 name = "jules"
 version = "0.1.0"
+description = ""
+authors = []
 
-[project.optional-dependencies]
-audit = ["pip-audit"]
+[tool.poetry.dependencies]
+python = "^3.11"
+chromadb = "0.5.23"
+
+[tool.poetry.group.dev.dependencies]
+pip-audit = "2.7.1"
 
 [tool.importlinter]
 contracts = ["importlinter_contracts.greenfield:Contract"]
+
+[build-system]
+requires = ["poetry-core>=1.9.0"]
+build-backend = "poetry.core.masonry.api"
