--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,12 +10,12 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: '3.11'
-          cache: 'pip'
+          cache: 'poetry'
       - name: Install dependencies
         run: |
-          pip install pytest import-linter
-          pip install -r backend/requirements.txt
+          pip install poetry
+          poetry install --no-root
       - name: Start services
-        run: docker compose up --build -d
+        run: docker-compose up --build -d chroma
       - name: Run tests
-        run: pytest -m "not slow"
+        run: poetry run pytest -m "not slow"
