--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       # Persist Chroma data locally
       - ./.chroma-data:/chroma/.chroma
     healthcheck:
+      start_period: 5s
       test: ["CMD", "curl", "-f", "http://localhost:8000/api/v1/heartbeat"]
       interval: 10s
       timeout: 2s
