--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,27 @@ authors = []
 
 [tool.poetry.dependencies]
 python = "^3.11"
+fastapi = "0.116.1"
+uvicorn = {version = "0.29.0", extras = ["standard"]}
+python-dotenv = "1.0.1"
+langchain-core = "0.3.69"
+langchain = "0.3.26"
+langchain-openai = "0.3.28"
+langgraph = "0.5.3"
+langchain-community = "0.3.27"
 chromadb = "0.5.23"
+sse-starlette = "1.6.1"
+aiohttp = "3.12.14"
+pydantic-settings = "2.10.1"
+starlette = "0.40.0"
+langgraph-checkpoint-sqlite = "2.0.10"
+setuptools = "78.1.1"
 
 [tool.poetry.group.dev.dependencies]
 pip-audit = "2.7.1"
+pre-commit = "4.2.0"
+pytest = "8.2.2"
+import-linter = "1.11.1"
 
 [tool.importlinter]
 contracts = ["importlinter_contracts.greenfield:Contract"]
