--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,11 @@ jobs:
         run: |
           pip install poetry
           poetry install --no-root
+      - name: Install Docker Compose
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y docker-compose-plugin
       - name: Start services
-        run: docker-compose up --build -d chroma
+        run: docker compose up -d chroma
       - name: Run tests
         run: poetry run pytest -m "not slow"
