ci: install poetry via action

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,10 +11,14 @@ jobs:
         with:
           python-version: '3.11'
           cache: 'poetry'
+
+      - uses: abatilo/actions-poetry@v2
+        with:
+          poetry-version: 1.8.2
       - name: Install dependencies
         run: |
-          pip install poetry
-          poetry install --no-root
+          poetry config virtualenvs.create false
+          poetry install --no-interaction --no-root
       - name: Install Docker Compose
         run: |
           sudo apt-get update
