--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: '3.11'
-          cache: 'poetry'
+          cache: 'pip'
 
       - uses: abatilo/actions-poetry@v2
         with:
