--- a/.github/workflows/dependency-audit.yml
+++ b/.github/workflows/dependency-audit.yml
@@ -13,7 +13,7 @@ jobs:
           cache: 'pip'
       - name: Install tools
         run: |
-          pip install pip-audit pip-licenses poetry
+          pip install pip-audit pip-licenses poetry poetry-plugin-export
           poetry export --without-hashes -f requirements.txt -o requirements.txt
           pip install -r requirements.txt
           rm requirements.txt
