Fix Chroma integration and tests

--- a/.env.sample
+++ b/.env.sample
@@ -2,6 +2,7 @@
 
 CHROMA_HOST=chroma
 CHROMA_PORT=8000
+CHROMA_TIMEOUT_MS=100
 OPENAI_API_KEY=
 # Optional simple bearer token for basic auth. Comment out to disable.
 # JULES_AUTH_TOKEN=my-secret-token
