fix docker mount for local modules

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
     command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
     volumes:
       - ./backend/app:/app/app
+      - ./db:/app/db
+      - ./jules:/app/jules
       - ./data:/app/data
   # Chroma vector database, empty instance ready for use
   chroma:
