--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
       # Persist Chroma data locally
       - ./.chroma-data:/chroma/.chroma
     healthcheck:
-      test: ["CMD-SHELL", "wget -q --spider http://localhost:8000/api/v1/heartbeat || exit 1"]
+      test: ["CMD-SHELL", "nc -z localhost 8000"]
       interval: 10s
       timeout: 3s
       retries: 10
