--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - .env
     environment:
       CHROMA_HOST: chroma
+      CHROMA_TELEMETRY_ENABLED: 'false'
     ports:
       - '8000:8000'
     command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
@@ -19,7 +20,10 @@ services:
       - ./data:/app/data
   # Chroma vector database, empty instance ready for use
   chroma:
-    image: ghcr.io/chroma-core/chroma:latest
+    image: ghcr.io/chroma-core/chroma:0.5.23
+    environment:
+      CHROMA_SERVER_TELEMETRY_ENABLED: 'false'
+      CHROMA_SERVER_AUTH_PROVIDER: none
     volumes:
       # Persist Chroma data locally
       - ./.chroma-data:/chroma/.chroma
