--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ chromadb = "==0.5.23"
 sse-starlette = "1.6.1"
 aiohttp = "3.12.14"
 pydantic-settings = "2.10.1"
+httpx = "0.27.0"
 starlette = "0.47.2"
 langgraph-checkpoint-sqlite = "2.0.10"
 setuptools = "78.1.1"
@@ -28,6 +29,7 @@ pre-commit = "4.2.0"
 pytest = "8.2.2"
 import-linter = "1.11.1"
 pytest-docker = "3.1.1"
+respx = "0.21.1"
 
 [tool.importlinter]
 contracts = ["importlinter_contracts.greenfield:Contract"]
