PR 1 – bump LangChain to ^0.1.16 and add centralised search settings

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,12 @@ CHROMA_HOST=chroma
 # Optional simple bearer token for basic auth. Comment out to disable.
 # JULES_AUTH_TOKEN=my-secret-token
 
+# ---------------------------------------------------------------------------
+# Vector search (MMR) settings – tweak only if you know what you're doing.
+# ---------------------------------------------------------------------------
+# Number of results returned to the caller (k)
+SEARCH_TOP_K=8
+# How many extra candidates to fetch for MMR (k' = k * oversample)
+SEARCH_MMR_OVERSAMPLE=4
+# λ ∈ [0,1] – 0→novelty-only, 1→relevance-only
+SEARCH_MMR_LAMBDA=0.5
