--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,16 +4,17 @@ version = "0.2.0"
 description = ""
 authors = []
 
+langchain-core = "0.3.69"
 [tool.poetry.dependencies]
 python = "^3.11"
 fastapi = "0.116.1"
 uvicorn = {version = "0.29.0", extras = ["standard"]}
 python-dotenv = "1.0.1"
-langchain-core = "0.3.69"
-langchain = "^0.1.16"
+
+langchain = "0.3.26"
 langchain-openai = "0.3.28"
 langgraph = "0.5.3"
-langchain-community = "0.3.27"
+
 chromadb = "==0.5.23"
 sse-starlette = "1.6.1"
 aiohttp = "3.12.14"
@@ -37,3 +38,5 @@ contracts = ["importlinter_contracts.greenfield:Contract"]
 [build-system]
 requires = ["poetry-core>=1.9.0"]
 build-backend = "poetry.core.masonry.api"
+
+langchain-community = "0.3.27"
