--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,8 @@ CHROMA_HOST=chroma
 # ---------------------------------------------------------------------------
 # Number of results returned to the caller (k)
 SEARCH_TOP_K=8
-# How many extra candidates to fetch for MMR (k' = k * oversample)
+# How many extra candidates to fetch for MMR – OVERSAMPLE means we first fetch
+# TOP_K * SEARCH_MMR_OVERSAMPLE docs.
 SEARCH_MMR_OVERSAMPLE=4
 # λ ∈ [0,1] – 0→novelty-only, 1→relevance-only
 SEARCH_MMR_LAMBDA=0.5
