--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -1,8 +1,5 @@
 version: "3.9"
 
-x-debug-env: &debug-env
-  JULES_DEBUG: "1"
-
 x-debug-logging: &debug-logging
   driver: json-file
   options:
@@ -11,9 +8,10 @@ x-debug-logging: &debug-logging
 
 services:
   jules:
+    profiles: ["debug"]
     environment:
-      <<: *debug-env
-    command:
+      JULES_DEBUG: "1"
+    entrypoint:
       - python
       - -m
       - backend.cli
@@ -22,9 +20,10 @@ services:
     logging: *debug-logging
 
   worker:
+    profiles: ["debug"]
     environment:
-      <<: *debug-env
-    command:
+      JULES_DEBUG: "1"
+    entrypoint:
       - python
       - -m
       - worker.cli
@@ -33,6 +32,7 @@ services:
     logging: *debug-logging
 
   chroma:
+    profiles: ["debug"]
     environment:
       RUST_LOG: debug
     logging: *debug-logging
